# Oasis-Shell

./: .env.example  .gitignore  FOUNDER_MANUAL.md  IMPLEMENTATION_PLAN.md  MANUAL_SMOKE_CHECKLIST.md  MANUAL_SMOKE_RESULTS.md  OS_FEATURES.md  README.md  all_functions.txt  build_errors.txt  build_errors_v2.txt  build_errors_v3.txt  disks_info.csv  fix_header.py  fix_manifest.ps1  fix_manifest.py  fix_syntax_45.py  oracle_engine.py  package-lock.json  package.json  partitions_info.csv  smoke_output.txt  tsc_output_2.txt  vite.config.mjs  vite.config.ts
docs/: ACTIVE_STRATEGY.md  ARCHITECTURE.md  CHANGELOG.md  DART.md  FEATURES.md  SYSTEM_BLUEPRINT.md  WORKING_EXAMPLE.md  api_docs.md  database_schema.md  fixes_log.md  improvements.md  project_overview.md  setup_guide.md  suggestions.md
scratch/: cleanup_arkansas.py  patch_system_oracle.py
scripts/: collect-smoke-diagnostics.ps1  daily-start.ps1  expand_tauri_defaults.py  fix_cognition_error.py  fix_dashboard_logic.py  fix_dashboard_logic_v2.py  fix_hud_logic.py  fix_market_crash.py  fix_panel_props.py  fix_system_panel.py  fix_systempanel_nulls.py  freeze_command.py  freeze_context.py  freeze_context_v2.py  full-health.ps1  neural_push.py  (+23 more)
src-tauri/: Cargo.toml  check_output.txt  check_stash.txt  error.txt  tauri.conf.json  tsc_output_3.txt  tsc_output_4.txt
src-tauri/src/: access.rs  ai.rs  chronos.rs  golems.rs  graph.rs  health.rs  ledger.rs  lib.rs  macros.rs  main.rs  mirror.rs  oracle.rs  reports.rs  search.rs  state.rs  strategy.rs  system.rs  vault.rs  vision.rs
src-tauri/tests/: command_integration.rs
(+170 files in other folders)
