[package]
name = "oasis-shell"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oasis_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33.0"
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_ProcessStatus"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
chrono = { version = "0.4.39", features = ["serde"] }
notify = "8.0.0"
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
walkdir = "2.5.0"
tiny_http = "0.12.0"
screenshots = "0.8.10"
base64 = "0.22.1"
image = "0.25.5"
aes-gcm = "0.10.3"
aead = "0.5.2"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
hmac = "0.12.1"
sha2 = "0.10.6"

